--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <nav>
             <ul>
                 <li><a id="active" href="">Home</a></li>
-                <li><a href="Single_pages/about-me.html">About Me</a></li>
-                <li><a href="Single_pages/setup.html">My Setup</a></li>
+                <li><a href="single_pages/about-me.html">About Me</a></li>
+                <li><a href="single_pages/setup.html">My Setup</a></li>
                 <li><a href="songs/index.html">Songs</a></li>
-                <li><a href="Single_pages/links.html">Links</a></li>
-                <li><a href="Single_pages/Gallery.html">Gallery</a></li>
+                <li><a href="single_pages/links.html">Links</a></li>
+                <li><a href="single_pages/Gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <h1 style="text-align: center; margin-top: 26px;">Coentjeee.xyz</h1>
