--- a/single_pages/about-me.html
+++ b/single_pages/about-me.html
@@ -14,10 +14,10 @@
             <ul>
                 <li><a class="active" href="../index.html">Home</a></li>
                 <li><a id="active" href="">About Me</a></li>
-                <li><a href="../Single_pages/setup.html">My Setup</a></li>
+                <li><a href="../single_pages/setup.html">My Setup</a></li>
                 <li><a href="../songs/index.html">Songs</a></li>
-                <li><a href="../Single_pages/links.html">Links</a></li>
-                <li><a href="../Single_pages/Gallery.html">Gallery</a></li>
+                <li><a href="../single_pages/links.html">Links</a></li>
+                <li><a href="../single_pages/Gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <img src="../Pictures/logo.png" class="header-logo" alt="Logo">
