--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <h1 style="text-align: center; margin-top: 26px;">Coentjeee.xyz</h1>
-        <img src="Pictures/logo.png" class="header-logo" alt="Logo">
+        <img src="pictures/logo.png" class="header-logo" alt="Logo">
     </header>
 
     <center><div class="container"></div>
@@ -45,7 +45,7 @@
     </center>
 
     <footer>
-        <img src="Pictures/logo.png" style="height: 120px; width: 120px;"> <br>
+        <img src="pictures/logo.png" style="height: 120px; width: 120px;"> <br>
         Coentjeee.xyz
     </footer>
 </body>
