--- a/single_pages/Gallery.html
+++ b/single_pages/Gallery.html
@@ -23,20 +23,20 @@
             </ul>
         </nav>
         <h1 style="text-align: center; margin-top: 26px;">Gallery</h1>
-        <img src="../Pictures/logo.png" class="header-logo" alt="Logo">
+        <img src="../pictures/logo.png" class="header-logo" alt="Logo">
 
     </header>
 
     <center><div class="first">
-        <img id="image" style="height: 320px;" src="../Pictures/20240910_170300.jpg" alt="">
-        <img style="height: 320px; max-width: 20%;" src="../Pictures/20240910_170326.jpg" alt="">
-        <img id="image" src="../Pictures/20240910_170510.jpg" alt="" style=" height: 320px; max-width: 30%;">
+        <img id="image" style="height: 320px;" src="../pictures/20240910_170300.jpg" alt="">
+        <img style="height: 320px; max-width: 20%;" src="../pictures/20240910_170326.jpg" alt="">
+        <img id="image" src="../pictures/20240910_170510.jpg" alt="" style=" height: 320px; max-width: 30%;">
     </div>
     </center>
     <br style="margin-bottom: 0.2%"><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer>
-        <img src="../Pictures/logo.png" style="height: 120px; width: 120px;"> <br>
+        <img src="../pictures/logo.png" style="height: 120px; width: 120px;"> <br>
         Coentjeee.xyz
     </footer>
 </body>
