--- a/single_pages/about-me.html
+++ b/single_pages/about-me.html
@@ -20,7 +20,7 @@
                 <li><a href="../single_pages/Gallery.html">Gallery</a></li>
             </ul>
         </nav>
-        <img src="../Pictures/logo.png" class="header-logo" alt="Logo">
+        <img src="../pictures/logo.png" class="header-logo" alt="Logo">
 
     </header>
 
@@ -59,7 +59,7 @@
     </center>
     
     <footer>
-        <img src="../Pictures/logo.png" style="height: 120px; width: 120px;"> <br>
+        <img src="../pictures/logo.png" style="height: 120px; width: 120px;"> <br>
         Coentjeee.xyz
     </footer>
 </body>
