--- a/single_pages/setup.html
+++ b/single_pages/setup.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <h1 style="text-align: center; margin-top: 26px; margin-bottom: 4px;">My Setup</h1>
-        <img src="../Pictures/logo.png" class="header-logo" alt="Logo">
+        <img src="../pictures/logo.png" class="header-logo" alt="Logo">
         <p style="text-align: center;">This page is about the tech I use. (PC's, peripherals etc...)</p>
     </header>
 
@@ -120,7 +120,7 @@
 
     
     <footer>
-        <img src="../Pictures/logo.png" style="height: 120px; width: 120px;"> <br>
+        <img src="../pictures/logo.png" style="height: 120px; width: 120px;"> <br>
         Coentjeee.xyz
     </footer>
 </body>
