--- a/songs/Song-36.html
+++ b/songs/Song-36.html
@@ -15,7 +15,7 @@ body {background-color: grey;}
      </style>
 
      <head>
-        <a href="Daily-Songs.html">
+        <a href="index.html">
             <button>back</button>
         </a>
      </head>
