--- a/songs/Song-36.html
+++ b/songs/Song-36.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="songs.css">
-        <meta name="description"content= "Artists: James Newton Howard and Jennifer Lawrence <br>
-        Album: The Hunger Games: Mockingjay Pt.1 <br>
-        Release date: 9 December, 2014 <br>
-        Genre: Folk <br>
-        Lenght 3 Minutes and 38 seconds">
+        <meta name="description"content= "Artists: Dylan Conrique, Noak Hellsing<br>
+      Album: None (This song is a single)<br>
+      Release date: 9 January, 2021 <br>
+      Genre: Pop<br>
+      Lenght 3 Minutes and 35 seconds <br>"
+
         <title>The Hanging Tree</title>
         <style>
 body {background-color: grey;}
