--- a/songs/Song-36.html
+++ b/songs/Song-36.html
@@ -10,7 +10,7 @@
       Genre: Pop<br>
       Lenght 3 Minutes and 35 seconds <br>"
 
-        <title>The Hanging Tree</title>
+        <title>Bitter</title>
         <style>
 body {background-color: grey;}
      </style>
