--- a/songs/Song-36.html
+++ b/songs/Song-36.html
@@ -5,11 +5,10 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="songs.css">
         <meta name="description"content= "Artists: Dylan Conrique, Noak Hellsing<br>
-      Album: None (This song is a single)<br>
-      Release date: 9 January, 2021 <br>
-      Genre: Pop<br>
-      Lenght 3 Minutes and 35 seconds <br>"
-
+              Album: None (This song is a single)<br>
+              Release date: 9 January, 2021 <br>
+              Genre: Pop<br>
+              Lenght 3 Minutes and 35 seconds">
         <title>Bitter</title>
         <style>
 body {background-color: grey;}
